# inburn

./: Cargo.toml  README.md  build.rs
src/: guide.rs  lib.rs  main.rs  mnist.rs
