
[package]
name = "inburn"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
repository  = "https://github.com/mhfan/inburn"
categories  = [ "Science" ]     # https://crates.io/category_slugs
description = "Comprehensive deep reinforcement learning based on Burn framework"
keywords = [  "deep-learning", "reinforcement-learning", "machine-learning", "neural-network" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  # git = "https://github.com/Tracel-AI/burn"
burn = { version = "0.16", features = [ "ndarray", "train", "vision", "wgpu", ] }
#serde = "1.0"

[build-dependencies]
burn-common = { version = "0.16", features = [ "network" ] }
burn-import = "0.16"
chrono = "0.4"

[workspace]

